Solucion error ropajes

--- a/ropas2.html
+++ b/ropas2.html
@@ -70,7 +70,7 @@
                 <a href="#armadurasCalor" class="nav-link bg-dark text-light" data-bs-toggle="tab" role="tab" aria-selected="false"
                     aria-controls="contenido-inicio" id="calor-tab">Calor</a>
             </nav>
-
+            <!-- <input type="checkbox" style="visibility: hidden;" id="oculto" class="ropajesInput"> -->
             <!-- contenido -->
             <div class="tab-content bg-dark bg-opacity-75" id="armaduras">
                 <div class="tab-pane fade show p-3" role="tab" id="armadurasNormales" aria-labelledby="normales-tab">
